# aoc24

./: .gitignore  CMakeLists.txt  README.md  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp
.devcontainer/: Dockerfile  devcontainer.json
