cmake_minimum_required(VERSION 3.10)

project(AdventofCode2024)

# Set compiler flags
set(CMAKE_CXX_FLAGS "-std=c++20 -Wall -Wextra")

FIND_PACKAGE(Boost)

# Add source files for the executable
# add_executable(aoc_day1 day01.cpp)

# add_executable(aoc_day2 day02.cpp)

# add_executable(aoc_day3 day03.cpp)

# add_executable(aoc_day4 day04.cpp)

# add_executable(aoc_day5 day05.cpp)

# add_executable(aoc_day6 day06.cpp)

# add_executable(aoc_day7 day07.cpp)

# add_executable(aoc_day8 day08.cpp)

# add_executable(aoc_day9 day09.cpp)

# add_executable(aoc_day10 day10.cpp)

add_executable(aoc_day11 day11.cpp)